@@ -349,6 +349,11 @@ player_chat_wait_teamleader_help    Set to 1 if only team leaders, and 0 if all 
 wait_for_external_script_help Let the server wait for an external script between two rounds until the script switches this setting back to 0.
 wait_for_external_script_timeout_help If the server has been paused by WAIT_FOR_EXTERNAL_SCRIPT for more seconds than this, kickstart the game.
 
+spawn_script_help                   Spawns an external script from a scripts/ subdirectory on the data path.
+respawn_script_help                 Spawns an external script from a scripts/ subdirectory on the data path if no already running instance is found.
+kill_script_help                    Kills a script. Argument must match the SPAWN_SCRIPT argument.
+check_script_help                   Should safety checks be done on script commands? Very much recommended to leave this on.
+
 chatter_remove_time_help            Time in seconds after which a permanent chatter is removed from the game
 idle_remove_time_help               Time in seconds after which an inactive player is removed from the game
 idle_kick_time_help                 Time in seconds after which an inactive player is kicked
@@ -3328,6 +3333,7 @@ nconfig_error_nonet         Got conf message for  setting \1 which is not networ
 nconfig_error_ignoreold		Ignoring old conf message for setting \1.\n
 nconfig_value_changed		\1 changed from \2 to \3 on server order.\n
 
+config_accesslevel_-1       Shell
 config_accesslevel_0        Owner
 config_accesslevel_1        Administrator
 config_accesslevel_2        Moderator
@@ -3344,6 +3350,9 @@ config_accesslevel_20       Program
 
 access_level_help           Changes the access level of a configuration item to make it available to lower ranked users
 access_level_usage          usage: ACCESS_LEVEL <config command> <required minimal access level (numerical)>\n
+access_level_change         Required access level of command \1 changed to "\2".\n
+access_level_nochange_now   Cannot change access level of \1: it is currently at "\2", you only have "\3", you would steal access.\n
+access_level_nochange_later   Cannot change access level of \1 to "\2", you only have "\3" and would not be able to change it back.\n
 access_level_change         Required access level of command \1 changed to "\2".\n
 access_level_error          Required access level of command \1 is "\2", you only have "\3".\n
 
