@@ -29,6 +29,8 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #include "rConsole.h"
 #include "rFont.h"
 #include "tConfiguration.h"
+#include "tRecorder.h"
+#include "tDirectories.h"
 
 #include <stdio.h>
 #include <fcntl.h>
@@ -45,9 +47,26 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 //#define fcntl _fcntl
 #else
 #include <signal.h>
+#include <sys/wait.h>
 #endif
 
-class rInputStream
+class rStream: public tReferencable< rStream >
+{
+    rStream( rStream const & other );
+public:
+    rStream(){};
+    virtual ~rStream(){};
+
+    // reads from the descriptor and
+    // executes commands on newlines.
+    // Return value of 'false' means the stream should be removed.
+    virtual bool HandleInput(){ return true; }
+
+    // writes output to potential scripts
+    virtual void Output( char const * output ){}
+};
+
+class rInputStream: public rStream
 {
 public:
 #ifdef WIN32
@@ -55,28 +74,6 @@ public:
 #else
     typedef int Descriptor;
 #endif
-
-    rInputStream( rInputStream const & other )
-    {
-        descriptor_ = other.descriptor_;
-        file_ = other.file_;
-        line_in_ = other.line_in_;
-        name_ = other.name_;
-
-        other.file_ = 0;
-    }
-
-    rInputStream & operator = ( rInputStream const & other )
-    {
-        descriptor_ = other.descriptor_;
-        file_ = other.file_;
-        line_in_ = other.line_in_;
-        name_ = other.name_;
-
-        other.file_ = 0;
-
-        return * this;
-    }
 
     rInputStream()
     {
@@ -91,7 +88,7 @@ public:
         Unblock();
     }
 
-    explicit rInputStream( Descriptor descriptor, char const * name, FILE * file = NULL )
+    rInputStream( Descriptor descriptor, char const * name, FILE * file = NULL )
     : descriptor_( descriptor ), file_( file ), name_( name )
     {
         Unblock();
@@ -99,7 +96,7 @@ public:
 
     // reads from the descriptor and
     // executes commands on newlines
-    void HandleInput();
+    bool HandleInput();
 
     ~rInputStream()
     {
@@ -109,6 +106,16 @@ public:
             file_ = NULL;
         }
     }
+
+    tString const & GetName()
+    {
+        return name_;
+    }
+protected:
+    Descriptor descriptor_;
+    FILE * file_;
+    tString name_;
+
 private:
     void Unblock()
     {
@@ -118,11 +125,70 @@ private:
 #endif
     }
 
-    Descriptor descriptor_;
-    mutable FILE * file_;
     tString line_in_;
-    tString name_;
 };
+
+#ifndef WIN32
+// stream to and from an external script
+class rScriptStream: public rInputStream
+{
+public:
+    explicit rScriptStream( Descriptor in, Descriptor out, char const * name, pid_t pid )
+    : rInputStream( in, name ), pid_( pid ), outDescriptor_( out )
+    {
+    }
+
+    virtual bool HandleInput()
+    {
+        return rInputStream::HandleInput() && ( 0 == kill( pid_, 0 ) );
+    }
+
+    // writes output to potential scripts
+    virtual void Output( char const * output )
+    {
+        int len = strlen( output );
+        while( len > 0 )
+        {
+            int written = write( outDescriptor_, output, len );
+            if( written <= 0 )
+            {
+                std::cerr << "Error writing to input stream of script '" << name_ << "' : "
+                          << strerror( errno ) << ". Killing script.\n";
+                Close();
+                return;
+            }
+            output += written;
+            len -= written;
+        }
+    }
+
+    ~rScriptStream()
+    {
+        Close();
+    }
+
+    // closes the streams, hopefully killing the script
+    void Close()
+    {
+        // close the streams
+        if( !file_ && descriptor_ >= 0 )
+        {
+            close( descriptor_ );
+            descriptor_ = -1;
+        }
+        if( outDescriptor_ >= 0 )
+        {
+            close( outDescriptor_ );
+            outDescriptor_ = -1;
+        }
+
+        name_ = "";
+    }
+private:
+    pid_t pid_;
+    Descriptor outDescriptor_;
+};
+#endif
 
 void rConsole::DoCenterDisplay(const tString &s,REAL timeout,REAL r,REAL g,REAL b){
     std::cout << tColoredString::RemoveColors(s) << '\n';
@@ -141,11 +207,22 @@ static void sr_HandleSigCont( int signal )
     sr_Unblock_stdin();
 }
 
+#ifndef WIN32
+static void sr_HandleSigChild( int signal )
+{
+    int stat;
+ 
+    /*Kills all the zombie processes*/
+    while(waitpid(-1, &stat, WNOHANG) > 0);
+}
+#endif
+
 void sr_Unblock_stdin(){
 #ifndef WIN32
     if ( !unblocked )
     {
         signal( SIGCONT, &sr_HandleSigCont );
+        signal( SIGCHLD, &sr_HandleSigChild );
     }
 #endif
 
@@ -160,8 +237,17 @@ void sr_Unblock_stdin(){
 #endif
 }
 
-static tArray< rInputStream > sr_inputStreams;
+static tArray< tJUST_CONTROLLED_PTR< rStream > > sr_inputStreams;
 static bool sr_daemon;
+
+// passes ladderlog output to external scripts
+void sr_InputForScripts( char const * input )
+{
+    for( int i = sr_inputStreams.Len()-1; i >= 0; --i )
+    {
+        sr_inputStreams[i]->Output( input );
+    }
+}
 
 void sr_Read_stdin(){
     static bool inited = false;
@@ -171,13 +257,25 @@ void sr_Read_stdin(){
         if( !sr_daemon )
         {
             sr_Unblock_stdin();
-            sr_inputStreams[sr_inputStreams.Len()]=rInputStream();
+            sr_inputStreams[sr_inputStreams.Len()]= tNEW(rInputStream)();
         }
     }
 
     for( int i = sr_inputStreams.Len()-1; i >= 0; --i )
     {
-        sr_inputStreams[i].HandleInput();
+        if( !sr_inputStreams[i]->HandleInput() )
+        {
+            // delete stream
+            if( i < sr_inputStreams.Len()-1 )
+            {
+                sr_inputStreams[i] = sr_inputStreams[ sr_inputStreams.Len()-1 ];
+            }
+            else
+            {
+                sr_inputStreams[i] = 0;
+            }
+            sr_inputStreams.SetLen( sr_inputStreams.Len()-1 );
+        }
     }
 }
 
@@ -201,7 +299,7 @@ public:
             FILE * f = fopen( pipe, "r" );
             if( f )
             {
-                sr_inputStreams[sr_inputStreams.Len()]=rInputStream( fileno(f), pipe, f );
+                sr_inputStreams[sr_inputStreams.Len()] = tNEW(rInputStream)( fileno(f), pipe, f );
                 fseek( f, 0, SEEK_END );
             }
             else
@@ -229,7 +327,7 @@ public:
 static rInputCommandLineAnalyzer sr_analyzer;
 #endif
 
-void rInputStream::HandleInput()
+bool rInputStream::HandleInput()
 {
     // stdin commands are executed at owner level
     tCurrentAccessLevel level( tAccessLevel_Owner, true );
@@ -273,10 +371,11 @@ void rInputStream::HandleInput()
             goon = false;
     }
 
-
+    return true;
 #else
-    char c;
-    while ( read(descriptor_,&c,1)>0){
+    char c = 0;
+    int lenRead;
+    while ( (lenRead=read(descriptor_,&c,1))>0){
         line_in_ << c;
         if (c=='\n')
         {
@@ -289,9 +388,295 @@ void rInputStream::HandleInput()
             line_in_="";
         }
     }
+
+    // 0 return on lenRead means end of file,
+    // -1 means an error unless errno has these specific values,
+    // in which case there is just no data currently.
+    return lenRead != 0 && ( errno == EAGAIN || errno == EWOULDBLOCK );
 #endif
 }
 
 void rConsole::DisplayAtNewline(){
 }
 
+#ifdef HAVE_UNISTD_H
+
+#define READ 0
+#define WRITE 1
+
+// launches shell command with pipes attached to it
+pid_t
+popen2(const char *command, int *infp, int *outfp, char const ** envp)
+{
+    int p_stdin[2], p_stdout[2];
+    pid_t pid;
+
+    if (pipe(p_stdin) != 0 || pipe(p_stdout) != 0)
+        return -1;
+
+    pid = fork();
+
+    if (pid < 0)
+        return pid;
+    else if (pid == 0)
+    {
+        close(p_stdin[WRITE]);
+        dup2(p_stdin[READ], READ);
+        close(p_stdout[READ]);
+        dup2(p_stdout[WRITE], WRITE);
+
+        execle("/bin/sh", "sh", "-c", command, NULL, envp);
+        perror("execl");
+        exit(1);
+    }
+
+    if (infp == NULL)
+        close(p_stdin[WRITE]);
+    else
+        *infp = p_stdin[WRITE];
+
+    if (outfp == NULL)
+        close(p_stdout[READ]);
+    else
+        *outfp = p_stdout[READ];
+
+    return pid;
+}
+
+#ifdef KRAWALL_SERVER
+static rScriptStream * sr_FindScriptStream( tString const & name )
+{
+    for( int i = sr_inputStreams.Len()-1; i >= 0; --i )
+    {
+        rScriptStream * script = dynamic_cast< rScriptStream * >( (rStream*)sr_inputStreams[i] );
+        if( script && script->GetName() == name )
+        {
+            return script;
+        }
+    }
+    
+    return NULL;
+}
+
+static bool sr_sanityCheckScript = true;
+static tConfItem<bool> src_sanityCheckScript( "CHECK_SCRIPT", sr_sanityCheckScript );
+static tAccessLevelSetter src_sanityCheckScriptALS( src_sanityCheckScript, tAccessLevel_Owner );
+
+class rEnvironment
+{
+public:
+    const char ** GetRaw()
+    {
+        // fill and terminate envp
+        envp_.SetLen(0);
+        for( int i = 0; i < strings_.Len(); ++i )
+        {
+            envp_[i] = strings_[i];
+        }
+        envp_[strings_.Len()] = NULL;
+
+        return &envp_[0];
+    }
+
+    rEnvironment()
+    {
+    }
+
+    void Add( char const * var, tString const & value )
+    {
+        strings_[strings_.Len()] = tString(var) + "=" + value;
+    }
+
+    void AddPath( char const * var, tPath const & path )
+    {
+        Add( var, path.GetPaths(":","") );
+    }
+private:
+    tArray< char const * > envp_;
+    tArray< tString > strings_;
+};
+
+static void sr_SpawnScript( tString const & command )
+{
+    // yes, rincludes are the one bit where CASACL is forbidden. And Maps, which 
+    // are equivalent to RINCLUDES.
+    // change that assumption and hopefully, the name of this
+    // function will tip you off something needs to be changed here.
+    if( tCasaclPreventer::InRInclude() )
+    {
+        con << "Launching scripts from RINCLUDE or maps is not possible for security reasons. Work around it by delegating the actual script launch to a local configuration file.\n";
+        return;
+    }
+
+    if( sr_sanityCheckScript )
+    {
+        char needle[2];
+        needle[1] = 0;
+        char const * allowed = ".,?/\\\"!@#$%^*-_+=[]~";
+
+        for( int i = command.Len()-2; i >= 0; --i )
+        {
+            // only whitespace and alphanumeric characters plus a few exceptions are allowed
+            needle[0] = command[i];
+            if( !isalnum(needle[0]) && !isblank(needle[0]) && !strstr( allowed, needle ) )
+            {
+                con << "External command \'" << command << "\' contains forbidden characters, only alphanumeric or blank characters are allowed, plus any of '" << allowed << "'.\n";
+                return;
+            }
+        }
+    }
+
+    if( !tRecorder::IsPlayingBack() )
+    {
+        tString fullCommand;
+
+        {
+            tString script;
+            tString arguments;
+            {
+                std::stringstream s( command );
+                s >> script;
+                arguments.ReadLine(s);
+            }
+
+            // find full path
+            tString path = tDirectories::Data().GetReadPath(tString("scripts/") + script);
+            if( path.Len() > 1 )
+            {
+                fullCommand = path + ' ' + arguments;
+            }
+            else if( sr_sanityCheckScript )
+            {
+                con << "External command \'" << command << "\' not found anywhere in <datapath>/scripts/.\n";
+                return;
+            }
+            else
+            {
+                fullCommand = command;
+            }
+        }
+
+        con << "Launching external command \'" << fullCommand << "\'...\n";
+
+        // get the var directory; it's the last entry
+        // tArray<tString> varPaths;
+        // tDirectories::Var().Paths(varPaths);
+        // tString varPath = varPaths(varPaths.Len()-1);
+        tString varPath = tDirectories::Var().GetWritePath("x");
+        if( varPath.Len() > 2 )
+        {
+            varPath = varPath.SubStr(0, varPath.Len()-3);
+        }
+        else
+        {
+            varPath = "./";
+        }
+
+        tString resourcePath = tDirectories::Resource().GetWritePath("x");
+        if( resourcePath.Len() > 2 )
+        {
+            resourcePath = resourcePath.SubStr(0, resourcePath.Len()-3);
+        }
+        else
+        {
+            resourcePath = "./";
+        }
+
+        rEnvironment env;
+        tString newPath=
+        tDirectories::Data().GetPaths("/scripts:","/scripts:") + 
+        tDirectories::Config().GetPaths(":",":") + 
+        getenv("PATH");
+        env.Add( "PATH", newPath );
+
+        // add special directories
+        env.Add( "ARMAGETRONAD_DIR_VAR", varPath );
+        env.Add( "ARMAGETRONAD_DIR_RESOURCE", resourcePath );
+        env.Add( "ARMAGETRONAD_DIR_RESOURCE_INCLUDED", tDirectories::Resource().GetDirPath() );
+
+        // add path collections
+        env.AddPath( "ARMAGETRONAD_PATH_DATA", tDirectories::Data() );
+        env.AddPath( "ARMAGETRONAD_PATH_CONFIG", tDirectories::Config() );
+        env.AddPath( "ARMAGETRONAD_PATH_VAR", tDirectories::Var() );
+        env.AddPath( "ARMAGETRONAD_PATH_SCREENSHOT", tDirectories::Screenshot() );
+        env.AddPath( "ARMAGETRONAD_PATH_RESOURCE", tDirectories::Resource() );
+
+        // add all settings
+        tConfItemBase::tConfItemMap const & confItemMap = tConfItemBase::GetConfItemMap();
+        for( tConfItemBase::tConfItemMap::const_iterator iter = confItemMap.begin();
+             iter != confItemMap.end(); ++iter )
+        {
+            if( !(*iter).second->CanSave() || (*iter).first.StartsWith( "PASSWORD" ) )
+            {
+                // yeah, well, password storage. Not really an issue, unlikely to be
+                // set on the server anyway, the script can read the config directly
+                // just as well, but we don't want script authors ot freak out when they
+                // notice it in the environment. 
+                continue;
+            }
+
+            std::stringstream s;
+            (*iter).second->WriteVal(s);
+            env.Add( tString("ARMAGETRONAD_") + (*iter).first, tString( s.str().c_str() ) );
+        }
+
+        int infp, outfp;
+        pid_t pid = popen2( fullCommand, &infp, &outfp, env.GetRaw() );
+        sr_inputStreams[sr_inputStreams.Len()] = tNEW(rScriptStream)( outfp, infp, command, pid );
+    }
+    else
+    {
+        con << "Launching external command \'" << command << "\'...\n";
+    }
+}
+
+// spawns a script
+static void sr_SpawnScriptCommand( std::istream & s )
+{
+    tString command;
+    command.ReadLine(s);
+    
+    sr_SpawnScript( command );
+}
+
+static tConfItemFunc sr_spawnScript( "SPAWN_SCRIPT", sr_SpawnScriptCommand );
+static tAccessLevelSetter sr_spawnScriptALS( sr_spawnScript, tAccessLevel_Owner );
+
+// respawns a script
+static void sr_RespawnScriptCommand( std::istream & s )
+{
+    tString command;
+    command.ReadLine(s);
+    
+    if( !sr_FindScriptStream( command ) )
+    {
+        sr_SpawnScript( command );
+    }
+}
+
+static tConfItemFunc sr_respawnScript( "RESPAWN_SCRIPT", sr_RespawnScriptCommand );
+static tAccessLevelSetter sr_respawnScriptALS( sr_respawnScript, tAccessLevel_Owner );
+
+// respawns a script
+static void sr_KillScriptCommand( std::istream & s )
+{
+    tString command;
+    command.ReadLine(s);
+    
+    rScriptStream * stream = sr_FindScriptStream( command );
+    if( stream )
+    {
+        con << "Killing script \'" << command << "\'.\n";
+        stream->Close();
+    }
+    else
+    {
+        con << "No script named \'" << command << "\' running.\n";
+    }
+}
+
+static tConfItemFunc sr_killScript( "KILL_SCRIPT", sr_KillScriptCommand );
+static tAccessLevelSetter sr_killScriptALS( sr_killScript, tAccessLevel_Owner );
+#endif
+
+#endif
